minor post spacing fix

--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -86,7 +86,8 @@ a.button
 .post-thumbnail
     float: left
     width: 40%
-    padding-right: 20px
+    padding-right: 25px
+    padding-bottom: 20px
     @include media-query($on-palm)
         float: none
         width: 100%
